# memoria

./: .gitignore  AGENTS.md  AGENT_REVIEW_HANDOFF.md  CLAUDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_READINESS.md  README.md  RELEASE_NOTES.md  SKILL.md  SKILL_USAGE.md  VALIDATION_COMPLETE.md  pyproject.toml  requirements.txt  run_skill.sh
.github/workflows/: release.yml
.specify/memory/: constitution.md
docs/: CLAUDE.md  MEMORIA_V3_PLAN_REQUEST.md  MIGRATION_v3.0.0_COMPLETE.md  QUICK-START-INVOCATION.md  README.md  SKILL_USAGE.md  agent-launcher-role-based-context-design.md  agent-mail-dashboard-design.md  main-user-agent-guidelines.md  skills-shared-venv-setup.md
installer/: README.md  install.sh  memoria-install.sh
installer/lib/: common.sh  docker-setup.sh  download.sh  python-check.sh  shell-detect.sh  version.sh
installer/templates/: shell-function.sh
installer/tests/integration/: test-install.sh  test-uninstall.sh  test-update.sh
installer/tests/unit/: run-all-tests.sh  test-common.sh  test-download.sh  test-shell-detect.sh  test-version.sh
memoria/: __init__.py  skill_helpers.py
memoria/adapters/: __init__.py
memoria/adapters/chromadb/: __init__.py  chromadb_adapter.py
memoria/adapters/document/: __init__.py  document_processor_adapter.py
memoria/adapters/search/: __init__.py  search_engine_adapter.py
memoria/adapters/sentence_transformers/: __init__.py  sentence_transformer_adapter.py
memoria/adapters/stubs/: document_processor_stub.py  embedding_generator_stub.py  search_engine_stub.py  vector_store_stub.py
memoria/application/: __init__.py
memoria/application/use_cases/: __init__.py  search_knowledge.py
memoria/compatibility/: __init__.py  error_mapper.py  raggy_facade.py
memoria/domain/: __init__.py  entities.py  errors.py  value_objects.py
memoria/domain/ports/: __init__.py  document_processor.py  embedding_generator.py  search_engine.py  vector_store.py
scripts/: package-release.sh
specs/001-chroma-search-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chroma-search-fix/checklists/: requirements.md
specs/001-chroma-search-fix/diagnostics/: README.md  baseline_results.csv  baseline_test.py  baseline_test_output.txt  check_collection_health.py  collection_health_output.txt  collection_stats.json  compare_search_modes.py  diagnostic_models.py  test_distance_formula.py  validate_fix.py
specs/002-memoria-performance/: data-model.md  docker-colima-setup.md  investigation-results.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test_indexing_performance.py  us1-root-cause.md
specs/002-memoria-performance/checklists/: requirements.md
specs/003-memoria-plugin-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-memoria-plugin-install/checklists/: requirements.md
specs/004-configurable-embeddings/: spec.md
specs/005-db-document-storage/: spec.md
specs/006-rag-search-quality/: spec.md
tests/: __init__.py  conftest.py  test_skill_helpers.py
tests/acceptance/: test_mcp_user_acceptance.py  test_search_acceptance.py
tests/adapters/chromadb/: __init__.py  (+1 more)
tests/application/: test_search_knowledge.py
tests/compatibility/: __init__.py  conftest.py  test_error_mapper.py  test_raggy_interface.py
tests/domain/: test_entities.py  test_value_objects.py
tests/integration/: test_search_quality.py
tests/performance/: test_indexing_performance.py  test_query_performance.py
tests/ports/: test_document_processor_port.py  test_embedding_generator_port.py  test_search_engine_port.py  test_vector_store_port.py
tests/unit/: test_version_check.py
(+14 files in other folders)
