[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoria"
version = "3.0.0"
description = "RAG (Retrieval-Augmented Generation) Skill Library with Onion Architecture"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",  # Replaces deprecated PyPDF2
    "python-docx>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",  # For formatted terminal output
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memoria*"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",

    # Type checking
    "mypy>=1.8.0",

    # Code quality
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.2.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=memoria",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require real services)",
    "slow: Slow tests (skip with -m 'not slow')",
]

[tool.coverage.run]
source = ["memoria"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Exclude compatibility tests (check external code without type stubs)
exclude = [
    "tests/compatibility/.*\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "docx.*",
    "pypdf.*",
    "rich.*",
    "raggy",  # Legacy raggy.py module (no type stubs)
]
ignore_missing_imports = true

# Compatibility tests check external code without stubs - skip type checking
[[tool.mypy.overrides]]
module = "tests.compatibility.*"
follow_imports = "skip"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (black handles this)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # Allow unused arguments and assert in tests
